--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.7.1",
+    "cors": "^2.8.5",
     "express": "4.18.2"
   },
   "devDependencies": {
